--- a/Söm.mw
+++ b/Söm.mw
@@ -10,6 +10,11 @@ Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|
 
 Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
+== Sömhä sidotud vepsän muštatiž ==
+<blockquote>
+* ''Midä ei sögoi, sidä i laudale ei togoi.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
