--- a/Söm.mw
+++ b/Söm.mw
@@ -10,8 +10,9 @@ Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|
 
 Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
-== Sömhä sidotud vepsän muštatiž ==
+== Sömhä sidotud vepsän muštatišed ==
 <blockquote>
+* ''Lehm tanhal — söm pertiš.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 </blockquote>
 
