--- a/Söm.mw
+++ b/Söm.mw
@@ -13,6 +13,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 == Sömhä sidotud vepsän muštatišed ==
 <blockquote>
 * ''Lehm tanhal — söm pertiš.''
+* ''Leib da vezi — saldatan söm.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 </blockquote>
 
