--- a/Estinma.mw
+++ b/Estinma.mw
@@ -40,9 +40,19 @@ Vl 1918 valdkund tedoti ičeze ripmatomudes da sai ''Esthonia''-nimitusen. Valdk
 ''Estland / Eistland''-nimituz om sidodud amuižskandivižihe ''aust-'', ''austr''-sanoihe ezimeletaden, ned znamoitas «päivnouzm».
 
 == Istorii ==
-Estinma sai ripmatomut ezmäižen kerdan vn 1918 24. päiväl uhokud [[Venäman imperii|Venäman imperijan]] čihodamižen satuseks. Oli okkupiruidud i mülütadud tazovaldkundaks [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vn 1940 6. päiväl elokud. Vn 1991 20. päiväl elokud Estinma tedištoiti ičeze ripmatomuden udessündutandas.
+Ezmäižed žilod nügüdlaižen Estinman pindal il'mestuiba 9600.-9500. vozil edes meiden erad, ned mülüiba «kund»-kul'turha. 10.-13. voz'sadoil aigaline feodaline kund oli sigä; sodajoukoiden pämehed ohjastiba maid.
 
-Valdkundan ezmäižed koume Konstitucijad ({{lang-et|Põhiseadus}} vai ''Konstitutsioon'') oliba olmas vll 1919−1920. Jäl'gmäine seičemenz' lugul Konstitucii<ref>[http://www.constituteproject.org/ontology/Estonia?lang=en Estinman Konstitucijan tekst ''constituteproject.org''-saital.] {{ref-en}}</ref> om vahvištadud vl 1992, se om väges voziden 2003, 2007, 2011 i 2015 vajehtusidenke.
+13. voz'sadal saksalaižed toraziba estilaižid vaste, sid' estilaižiden mad tuliba Livonijan ritarikundan maiden palaks. Sil aigal Estinma oli saksalaižiden ohjastusen al täuzin. 16. voz'sadal [[Reformacii]] augotihe Estinmas da sen satuseks [[protestantizm]] tuli man päižeks uskondaks; sil-žo voz'sadal Estinma, Livonijan sodan jäl'ghe, oli [[Ročinma|Ročinman]] palan. 
+
+Vl 1721., Pohjoižen sodan (Venäman imperijan da Ročinman keskes) satuseks, Estinma da erased toižed mad tuliba Venäman palaks. 
+
+Vn 1897. andmusiden mödhe, Estin gubernijas eli 958 tuhad risitud, sidä keskes: 90 % — estilaižed, 4,5 % — venälaižed, 3,5 % — saksalaižed.
+
+Venäman imperijan čihodamižen jäl'ghe Estinma sai ripmatomut ezmäižen kerdan vn 1918 24. päiväl uhokud. Valdkundan ezmäižed koume Konstitucijad ({{lang-et|Põhiseadus}} vai ''Konstitutsioon'') oliba olmas vll 1919−1920. Jäl'gmäine seičemenz' lugul Konstitucii<ref>[http://www.constituteproject.org/ontology/Estonia?lang=en Estinman Konstitucijan tekst ''constituteproject.org''-saital.] {{ref-en}}</ref> om vahvištadud vl 1992, se om väges voziden 2003, 2007, 2011 i 2015 vajehtusidenke. 
+
+Ma oli okkupiruidud i mülütadud tazovaldkundaks [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vn 1940 6. päiväl elokud. 
+
+Vn 1991 20. päiväl elokud Estinma tedištoiti ičeze ripmatomuden udessündutandas.
 
 == Geografijan andmused ==
 [[Fail:Relief map of Estonia.png|thumb|left|250px|Estinman reljefan kart]]
