--- a/Söm.mw
+++ b/Söm.mw
@@ -12,6 +12,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 
 == Sömhä sidotud vepsän muštatišed ==
 <blockquote>
+* ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
