/* Istorii */ formitez (ole tarkas ma-sananke: "Ma oli okkupiruidud.." voib käta "Земля была оккупирована..." - paremba ližata sinonimoid)

--- a/Estinma.mw
+++ b/Estinma.mw
@@ -40,17 +40,17 @@ Vl 1918 valdkund tedoti ičeze ripmatomudes da sai ''Esthonia''-nimitusen. Valdk
 ''Estland / Eistland''-nimituz om sidodud amuižskandivižihe ''aust-'', ''austr''-sanoihe ezimeletaden, ned znamoitas «päivnouzm».
 
 == Istorii ==
-Ezmäižed žilod nügüdlaižen Estinman pindal il'mestuiba 9600.-9500. vozil edes meiden erad, ned mülüiba «kund»-kul'turha. 10.-13. voz'sadoil aigaline feodaline kund oli sigä; sodajoukoiden pämehed ohjastiba maid.
+Ezmäižed žilod sünduiba nügüdlaižen Estinman territorijal vll 9600..9500 e.m.e., ned mülüiba «kund»-kul'turha. 10.-13. voz'sadoil aigaline feodaline kund oli siš; sodajoukuiden pämehed ohjastiba tahondoid.
 
-13. voz'sadal saksalaižed toraziba estilaižid vaste, sid' estilaižiden mad tuliba Livonijan ritarikundan maiden palaks. Sil aigal Estinma oli saksalaižiden ohjastusen al täuzin. 16. voz'sadal [[Reformacii]] augotihe Estinmas da sen satuseks [[protestantizm]] tuli man päižeks uskondaks; sil-žo voz'sadal Estinma, Livonijan sodan jäl'ghe, oli [[Ročinma|Ročinman]] palan. 
+13. voz'sadal [[saksalaižed]] toraziba estilaižid vaste, sid' estilaižiden mad tuliba [[Livonii|Livonijan]] ricar'kundan maiden palaks. Sil aigal Estinma oli saksalaižiden ohjandusen al täuzin. 16. voz'sadal [[Reformacii]] augotihe Estinmas, sen satuseks [[protestantizm]] tuli man päižeks uskondaks. Sil-žo voz'sadal Estinma kändihe [[Ročinma]]n palaks Livonijan sodan jäl'ghe. 
 
-Vl 1721., Pohjoižen sodan (Venäman imperijan da Ročinman keskes) satuseks, Estinma da erased toižed mad tuliba Venäman palaks. 
+Estinma da erased toižed mad tuliba Venäman palaks vl 1721, Pohjoižen sodan rezul'tataks [[Venäman imperii|Venäman imperijan]] i Ročinman keskes.
 
-Vn 1897. andmusiden mödhe, Estin gubernijas eli 958 tuhad risitud, sidä keskes: 90 % — estilaižed, 4,5 % — venälaižed, 3,5 % — saksalaižed.
+Vn 1897 andmusiden mödhe kaik 958 tuhad ristitud eliba Estin gubernijas, sidä kesken: 90 % — estilaižed, 4,5 % — venälaižed, 3,5 % — saksalaižed, 2,0 % — toižed rahvahad.
 
 Venäman imperijan čihodamižen jäl'ghe Estinma sai ripmatomut ezmäižen kerdan vn 1918 24. päiväl uhokud. Valdkundan ezmäižed koume Konstitucijad ({{lang-et|Põhiseadus}} vai ''Konstitutsioon'') oliba olmas vll 1919−1920. Jäl'gmäine seičemenz' lugul Konstitucii<ref>[http://www.constituteproject.org/ontology/Estonia?lang=en Estinman Konstitucijan tekst ''constituteproject.org''-saital.] {{ref-en}}</ref> om vahvištadud vl 1992, se om väges voziden 2003, 2007, 2011 i 2015 vajehtusidenke. 
 
-Ma oli okkupiruidud i mülütadud tazovaldkundaks [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vn 1940 6. päiväl elokud. 
+Estinma-valdkund oli okkupiruidud i mülütadud tazovaldkundaks [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vn 1940 6. päiväl elokud. 
 
 Vn 1991 20. päiväl elokud Estinma tedištoiti ičeze ripmatomuden udessündutandas.
 
