--- a/Sur'_Kivi.mw
+++ b/Sur'_Kivi.mw
@@ -5,15 +5,16 @@
  | Lidnanznam text = Suren Kiven lidnanznam
  | Flag text = Suren Kiven flag
  | Valdkund = Venäma
- | Eläjiden lugu = 38,493
- | Voz' = 2017
- | Pind = 
+ | Eläjiden lugu = 38,685
+ | Voz' = 2021
+ | Pind = 119.82
  | Fail = Bolshoy Kamen view 1.JPG
  | Pämez' = Aleksandr Andrühin<br />(viluku 2018—)
  | Telefonkod = +7-42335-xx-xxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 (MSK+7)
 }}
+[[Fail:Russia Primorsky Krai ZATO Bolshoy Kamen location map.svg|thumb|left|200px|Suren Kiven lidnümbrikon kart (2014)]]
 '''Sur' Kivi''' ({{lang-ru|Большой Камень}} [bɐlʲˈʂoj ˈkamʲɪnʲ]) om [[Venäma]]n lidn da lidnümbrik [[Merenrandaline rand|Merenrandaližen randan]] suves. Vhesai 2015 se oli [[sauptud administrativiž-territorialine ühtnik|sauptud]] lidn.
 
 == Istorii ==
@@ -27,7 +28,17 @@ Lidn sijadase [[Japonijan meri|Japonijan meren]] Ussuriiskan lahten randal, 48 m
 Petrovk-žilo ({{lang-ru|село Петровка}}, 977 rist. vl 2010) i Suhodol-žilo ({{lang-ru|село Суходол}}, 301 rist. vl 2010) mülüdas lidnümbrikho Suren Kiven ližaks. Lidnümbrikon pind — 119,82 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 39 257 ristitud, lidnümbrikon — 40 535 ristitud. Kaikiš suremb ristitišt oli 65 621 eläjad vl 1989. Vl 2017 kaik 39 739 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om saudud lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 39 257 ristitud, lidnümbrikon — 40 535 ristitud. Kaikiš suremb ristitišt oli 65 621 eläjad vl 1989. Vl 2017 kaik 38 493 ristitud elihe lidnas i 39 739 ristitud kaikes lidnümbrikos.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om saudud lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Рубка АПЛ К-434 Большой Камень 2015.06.27.JPG|K-434-VA-laivan hat (2015)
+К-419 Кузбасс в доке ДВЗ Звезда 2015.06.27.JPG|K-419 Kuzbass-VA-laiv Edahaižen Päivnouzman «Zvezda»-tegimen dokas (2015, ''Tähtaz'')
+Zvezda-DSME shipyard.jpg|Edahaižen Päivnouzman «Zvezda»-tegimen ratud kuva (2010)
+Станция Петровка (Приморский край).jpg|Petrovk-raudtestancii vl 2014
+</gallery>
 
 == Irdkosketused ==
 * [http://www.bk.pk.ru/ Suren Kiven lidnümbrikon tobmuden aluzkundoiden oficialine sait (''bk.pk.ru'').] {{ref-ru}}
