--- a/Vladivostok.mw
+++ b/Vladivostok.mw
@@ -1,22 +1,21 @@
 {{10000}}{{A10000}}
 {{Eländpunkt
  | Nimi = Vladivostok<br />Владивосток
- | Lidnanznam = Coat of arms of Vladivostok 2014.jpg
- | Flag = Flag of Vladivostok, Russia.png
+ | Lidnanznam = Coat of Arms of Vladivostok.svg
+ | Flag = Flag of Vladivostok.svg
  | Lidnanznam text = Vladivostokan lidnanznam
  | Flag text = Vladivostokan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 606,589
- | Voz' = 2017
+ | Eläjiden lugu = 600,871
+ | Voz' = 2021
  | Pind = 331.16
  | Fail = Vladivostok collage.jpg
- | Pämez' = Vitalii Verkejenko<br />(tal'vku 2017—)
+ | Pämez' = Konstantin Šestakov<br />(semendku 2021—)
  | Telefonkod = +7-423-xxx-xxxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 ([[MSK]]+7)
 }}
 [[Fail:Vladivostok-regions.svg|thumb|left|250px|Lidnan administrativižed rajonad]]
-[[Fail:Vladivostok Townhall.jpg|thumb|left|250px|Lidnan administracijan pert']]
 '''Vladivostok''' ({{lang-ru|Владивосток}} [vlɐdʲɪvɐˈstok]) om lidn (vspäi 1880), lidnümbrik da joudai jüguport (vs 2015 redukun 12. päiväspäi) [[Venäma]]n suvipäivnouzmas. Se om [[Merenrandaline rand|Merenrandaližen randan]] administrativine keskuz da kaikiš suremb lidn.
 
 Lidn om randan tegimišton da opendusen keskuz. Se om [[Transsib|Transsibirin raudten]] lopstancii, [[Tünvaldmerine laivišt|Tünvaldmerižen laivišton]] päsodameribaz.
@@ -32,14 +31,30 @@ Lidn sijadase kukhil [[Murav'jov-Amurskijan pol'sar'|Murav'jov-Amurskijan pol'sa
 Vladivostok-lidn jagase videks administrativižeks rajonaks: Leninan, Pervomaiskii, Pervorečenskii, Nevondkundaline da Frunzen rajonad. Viž žilod mülüdas lidnümbrikho Vladivostokan ližaks, sidä kesken järed Trudovoje-žilo (18 522 rist. vl 2010). Lidnümbrikon pind — 561,54 km².
 
 == Eläjad ==
-Vl 1897 lidnan ristitišt oli 28 933 eläjad. Kaikiš suremb lidnan ristitišt oli 648 tuhad ristituid vozil 1991−1992. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 592 034 ristitud, lidnümbrikon — 616 807 ristitud. Vl 2017 kaik 633 414 ristitud elihe lidnümbrikos.
+Vl 1897 lidnan ristitišt oli 28 933 eläjad. Kaikiš suremb lidnan ristitišt oli 648 tuhad ristituid vozil 1991−1992. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 592 034 ristitud, lidnümbrikon — 616 807 ristitud. Vl 2017 kaik 606 589 ristitud elihe lidnas i 633 414 ristitud kaikes lidnümbrikos.
 
 Rahvahad (lidn, vl 2010<ref>[http://primstat.gks.ru/wps/wcm/connect/rosstat_ts/primstat/resources/a75557804fafc402a38eabca6ff6f188/pub-04-04_%D0%A2%D0%B5%D1%80%D1%80%3D05000000.pdf Население по национальности и владению русским языком (Ristitišt rahvahuden mödhe da venän kel'mahtused) //Vn 2010 Venäman rahvahanlugemižen lopmižed Merenrandaližes randas. — Primstat (''primstat.gks.ru'').] {{ref-ru}}</ref>, enamba 0,3%): [[venälaižed]] — 80,3%, [[ukrainalaižed]] — 1,8%, [[uzbekalaižed]] — 1,2%, [[korejalaižed]] — 0,7%, [[kitajalaižed]] — 0,4%, [[totarlaižed]] — 0,4%, [[vaugedvenälaižed]] — 0,3%, [[armenijalaižed]] — 0,3%, toižed rahvahad — 1,5%, rahvahuden ozutandata — 13,1%. Fiksiruihe 4 [[vepsläižed|vepsläšt]], 10 [[suomalaižed|suomalašt]] da 65 [[estilaižed|estilašt]], i 4 [[karjalaižed|karjalašt]] elädas lidnümbrikos, ei ole lidnas.
+
+Edeližed lidnan pämehed oma Vitalii Verkejenko (tal'vku 2017 — reduku 2018) i Oleg Gumenük (tal'vku 2018 — semendku 2021).
 
 == Transport ==
 Avtobusad da ezilidnelektrojonused tobjimalaz, trolleibusad, tramvaid, funikulörad, ehtatimed, likutimvenehed oma kundaližeks transportaks lidnas da sen ümbrištos.
 
 Rahvahidenkeskeine soda- da civiline ''Vladivostok'' (''Kneviči'')-lendimport (''VVO / ВВО'') sijadase 38 km pohjoižpäivnouzmha lidnan keskusespäi, läz [[Artöm (lidn)|Artöm]]-lidnad. Sišpäi tehtas reisid [[Kitai]]he, [[Pohjoižkorei|Pohjoižkorejha]] da [[Suvikorei|Suvikorejha]], [[Japonii|Japonijan]] lidnoihe, [[Tailand]]ha, čarterreisid [[Uzbekistan]]ha, mugažo Venämadme.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Vladivostok Townhall.jpg|Lidnan administracijan pert'
+Church of Our Lady's Protection (Vladivostok) 1.jpg|Pühän Jumalanmaman Katken päjumalanpert' (ortodoksine hristanuskond), vn 2009 nägu (om saudud vll 2004−2007)
+В Дальзаводе 2013.10.20.jpg|Laivad kohendusel Dal'zavodas vl 2013, Kuldaine Sar'v-merikar
+«Fresh Plaza» Business Center Vladivostok 2011-06-06.JPG|«Fresh Plaza»-bizneskeskuz (2011)
+Vladivostok Russky Island Far Eastern Federal University DSC01028 2200.jpg|Edahaižen Päivnouzman federaline universitet (2015)
+Золотой мост, июль 2013.jpg|Zolotoi-sild (''Kuldaine'') vl 2013
+Vladivostok Russky Island Russky Bridge P8070612 2200.jpg|Russkii-sild (''Venälaine'') Russkii-sarennoks vl 2015
+Vladivostok harbor.jpg|Port merikaranno vl 2000
+Здание ДВЖД, жд вокзал, морской вокзал.jpg|Edahaižen Päivnouzman raudten sauvuz, merivagzal i Vladivostok-päraudtestancii vl 2006
+VladivostokStation.jpg|Vladivostok-päraudtestancijan sauvuz da torg senno vl 2008
+</gallery>
 
 == Sebruzlidnad<ref>[http://www.vlc.ru/en/cities/ Sister cities (Sebrizlidnad). — Vladivostokan administracii (''vlc.ru'').] {{ref-en}}</ref> ==
 * {{JAP|#}} [[Akit (lidn)|Akit-lidn]], [[Akit (prefektur)]], [[Japonii]] (vspäi 1992)
