--- a/Omsk.mw
+++ b/Omsk.mw
@@ -58,12 +58,12 @@ Avtobusad da trolleibusad oma kundaližeks transportaks lidnas. Vspäi 1992 metr
 * [[Vrubel' Mihail|Mihail Vrubel']] (1856−1910) — oli Venäman pirdai.
 
 == Galerei ==
-<center><gallery>
-Fail:ArenaOmsk.jpg|Omsk-aren
-Fail:Речной вокзал (Омск).JPG|Jogistancii
-Fail:Omsk retail and office center Festival.JPG|Torguimiž-kontorine «Festival'»-keskuz hural randpolel
-Fail:Omsk Pushkin Library.jpg|Regionaline kirjišt
-</gallery></center>
+<gallery mode="packed" heights="125px">
+Omsk retail and office center Festival.JPG|Torguimiž-kontorine «Festival'»-keskuz hural randpolel
+Omsk Pushkin Library.jpg|Regionaline kirjišt
+ArenaOmsk.jpg|Omsk-aren
+Речной вокзал (Омск).JPG|Jogistancii
+</gallery>
 
 == Homaičendad ==
 <references />
