--- a/Isil'kul'.mw
+++ b/Isil'kul'.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Isil'kul'<br/>Исилькуль
- | Lidnanznam = 
+ | Lidnanznam = Isilkul COA (2008).jpg
  | Flag = Flag of Isilkul (Omsk oblast).png
- | Lidnanznam text =
+ | Lidnanznam text = Isil'kulin lidnanznam
  | Flag text = Isil'kulin flag
  | Valdkund = Venäma
- | Eläjiden lugu = 23,151
- | Voz' = 2017
+ | Eläjiden lugu = 22,101
+ | Voz' = 2021
  | Pind = 39
  | Fail = Church of the New Martyrs and Confessors of Russia in Isil'kul'.jpg
  | Pämez' = Vladimir Gill'<br />(kezaku 2016—)
@@ -25,7 +25,9 @@ Nimitihe Isil'kulid lähižen penen järven mödhe, sen rand sijadase 3 km lidna
 Isil'kul' om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 94,81 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 482 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 27 800 eläjad vl 2001. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: Venämalaižiden uziden moknikoiden da hengenavaidamižen sajiden päjumalanpert' (2004) i Pühiden Apostoloiden jumalanpert' (avaitud vl 2003 restavracijan jäl'ghe).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 482 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 27 800 eläjad vl 2001.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: Venämalaižiden uziden moknikoiden da hengenavaidamižen sajiden kafedraline päjumalanpert'<ref>[http://sobory.ru/geo/locat/4646 Isil'kulin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (2004) i Pühiden Apostoloiden jumalanpert' (avaitud vl 2003 restavracijan jäl'ghe).
 
 == Homaičendad ==
 <references />
