--- a/Isil'kul'.mw
+++ b/Isil'kul'.mw
@@ -27,14 +27,13 @@ Isil'kul' om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 94,81 k
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 482 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 27 800 eläjad vl 2001.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: Venämalaižiden uziden moknikoiden da hengenavaidamižen sajiden kafedraline päjumalanpert'<ref>[http://sobory.ru/geo/locat/4646 Isil'kulin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (2004) i Pühiden Apostoloiden jumalanpert' (avaitud vl 2003 restavracijan jäl'ghe).
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: Venämalaižiden uziden moknikoiden da hengenavaidamižen sajiden kafedraline päjumalanpert'<ref>[http://sobory.ru/geo/locat/4646 Isil'kulin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (2004) i Pühiden Apostoloiden jumalanpert' (om avaitud vl 2003 restavracijan jäl'ghe).
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://isilk.omskportal.ru/ru/municipal/localAuthList/3-52-215-1/poseleniya/isilkulskoe_gorodskoe.html Isil'kul'-lidnankundan lehtpoled Isil'kulin rajonan saital (''isilk.omskportal.ru''), Omskan agjan gubernatoran da Ohjastusen oficialižel portalal.] {{ref-ru}}
-* [http://www.isik55.com/ Isil'kul'-lidnan informacine sait (''isik55.com'').] {{ref-ru}}
+* [http://isilk.omskportal.ru/ Lidnan i Isil'kulin rajonan sait (''isilk.omskportal.ru'') Omskan agjan gubernatoran da Ohjastusen oficialižel portalal.] {{ref-ru}}
 
 {{Omskan agjan lidnad}}
 
