--- a/Kalačinsk.mw
+++ b/Kalačinsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Kalačinskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 22,781
- | Voz' = 2017
+ | Eläjiden lugu = 22,297
+ | Voz' = 2021
  | Pind = 25.13
- | Fail = Osminin's School 1.jpg
- | Pämez' = Mihail Anisimov<br />(sügüz'ku 2014—)
+ | Fail = Калачинск.jpg
+ | Pämez' = Aleksei Basov<br />(kül'mku 2020—)
  | Telefonkod = +7-38155-xx-xxx
  | Avtokod = 55
  | Aigvö = [[UTC]]+6 ([[MSK]]+3)
@@ -24,16 +24,25 @@ Kalačinsk šingotase mehanižel tegimel (maižanduzazeged, katl'ad) i keramiže
 == Geografijan andmused ==
 Lidn sijadase [[Om']]-jogen ({{lang-ru|Омь}}, [[Irtiš]]an oiged ližajogi) hural randal tobjimalaz, 100 m ü.m.t. keskmäižel korktusel. Matkad [[Omsk]]an röunhasai om 65 km päivlaskmha raudtedme vai avtol. Toine lähembaine lidn om [[Tatarsk]] (Novosibirskan agj) 90 km päivnouzmha Transsibal vai avtotedme.
 
-Kalačinsk om lidnankundan üks'jäine eländpunkt.
+Kalačinsk om lidnankundan üks'jäine eländpunkt. Lidnankundan Nevondkund radab (2020). Lidnan administracii om likvidiruidud vl 2015, rajonan administracii tegeb sen velgusidme.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 23 556 ristitud, rajonan pol'. Kaikiš suremb ristitišt oli 26 tuhad eläjid vl 1998.
+
+Professionaližen opendusen aluzkund om Kalačinskan agrariž-tehnine tehnikum.<ref>[http://www.spokatt.kalach.obr55.ru/ Kalačinskan agrariž-tehnižen tehnikuman sait (''spokatt.kalach.obr55.ru'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Memorial wall kalachinsk.jpg|Memorialine sein [[Sur' Tatanmaine soda|Suren sodan]] pölištunuzile (2016)
+Osminin's School 1.jpg|Lidnan kodirandantedištandmuzei (2016, ende škol, P.E. Osminin-vägimez' openui siš)
+Станция Калачинская (вокзал).jpg|Kalačinskai-päraudtestancijan sauvuz vl 2021
+</gallery>
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
-* [http://kalach.omskportal.ru/ru/municipal/localAuthList/3-52-218-1/poseleniya/kalachinskoe_gorodskoe.html Lidnankundan lehtpoled Kalačinskan rajonan tobmuden aluzkundoiden saital (''kalach.omskportal.ru'').] {{ref-ru}}
+* [http://kalach.omskportal.ru/ Lidnan i Kalačinskan rajonan tobmuden aluzkundoiden sait (''kalach.omskportal.ru'').] {{ref-ru}}
 {{Commons|Category:Kalachinsk}}
 
 {{Omskan agjan lidnad}}
