--- a/Elo.mw
+++ b/Elo.mw
@@ -18,6 +18,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 <blockquote>
 * ''Ala varaida kolnut, varaida eläbad.''
 * ''Elo meleta kuti puzu reigunke.''
+* ''Igän eläd, igän openud.''
 </blockquote>
 
 == Kacu mugažo ==
