--- a/Täid.mw
+++ b/Täid.mw
@@ -1,9 +1,11 @@
-[[Fail:Linognathus-louse.jpg|thumb|right|275px|Täi]]
-'''Täid''' ([[latinan kel'|lat.]] ''Anoplura'') oma [[Gaved'|gavedid]].
+[[Fail:Linognathus-louse.jpg|thumb|right|250px|Täi]]
+'''Täid''' ({{lang-la|Anoplura}}) oma [[gaved'|gavedid]].
+
+== Täihe sidotud vepsän muštatiž ==
+<blockquote>
+* ''Instrumentata täid ed riko.''
+</blockquote>
 
 {{stub}}
-
 [[Kategorii:Gavedid]]
 [[Kategorii:Živatad kirjamišton mödhe]]
-
-[[de:Tierläuse#Anoplura Echte Tierläuse]]
