--- a/Laps'.mw
+++ b/Laps'.mw
@@ -29,6 +29,7 @@
 * ''Maman heng palab lapsehe, a lapsen kivehe.'' (lapsiš kitändata)
 * ''Openda last, kuni mučuine (kuni om nor').''
 * ''Openda last kuni poikpoli sijas magadab.''
+* ''Ozr orahaižes, a laps' vagahaižes.''
 * ''Pahemb laps' paimnehe.''
 * ''Pen't ed kazvata, ka surt ed homaiče.''
 * ''Sündutada last om kibed, a kazvatada om jüged.''
