--- a/Ojat'_(jogi).mw
+++ b/Ojat'_(jogi).mw
@@ -28,6 +28,11 @@ Keskaigan [[Baltijan meren suomalaižed heimod|Baltijan meren suomalaine heim]] 
 * [[Pecoil]]-külä
 * [[Vil'häl]]-külä
 
+== Ojatihe sidotud vepsän muštatiž ==
+<blockquote>
+* ''Ojatin lapsed seičemen üht ei varaikoi.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
