--- a/Piter.mw
+++ b/Piter.mw
@@ -148,6 +148,11 @@ WinterPalace.jpg|[[Tal'veline pert'kulu]]<br/>([[Ermitaž|Ermitaž-muzei]])
 * [[Malafejev Väčeslav|Väčeslav Malafejev]] (sünd. 1979) — Venäman futbolist-verainik.
 * [[Mgoän Zarifa|Zara]] (sünd. 1983) — Venäman pajatai.
 
+== Piterihe sidotud vepsän ozoitez ==
+<blockquote>
+Piteriš pino vereb, a mijale kulub (jumalanjuru).
+</blockquote>
+
 == Homaičendad ==
 <references />
 
