--- a/Nazivajevsk.mw
+++ b/Nazivajevsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 11,249
- | Voz' = 2017
+ | Eläjiden lugu = 10,709
+ | Voz' = 2021
  | Pind = 68.7
  | Fail = Trans Sibir.JPG
  | Pämez' = Viktor Lupinos<br />(keväz'ku 2010—)
@@ -17,7 +17,9 @@
 '''Nazivajevsk''' ({{lang-ru|Называевск}}) om [[Venäma]]n lidn da lidnankund [[Omskan agj]]an päivlaskmas. Se om [[Nazivajevskan rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1910 kuti ''Sibirin posad-žilo'' ({{lang-ru|посёлок Сибирский посад}}) Nazivajevskai-raudtestancijanno. Vll 1917−1933 nimitihe ''Sibirskoje-eländpunktaks''. Vspäi 1933 — Nazivajevk-žilo ({{lang-ru|Называевка}}). Vl 1947 kätihe Novonazivajevk-radnikžiloks. Se sai lidnan statusad vl 1956 nügüdläiženke nimenke. Nazivajevsk šingotase savičtegimel i nahktegimel, mugažo maidtegim radab.
+Eländpunktan aluz om pandud vl 1910 kuti ''Sibirin posad-žilo'' ({{lang-ru|посёлок Сибирский посад}}) Nazivajevskai-raudtestancijanno. Vll 1917−1933 nimitihe ''Sibirskoje-eländpunktaks''. Vspäi 1933 — Nazivajevk-žilo ({{lang-ru|Называевка}}). Vl 1947 kätihe Novonazivajevk-radnikžiloks. Se sai lidnan statusad vl 1956 nügüdläiženke nimenke.
+
+Nazivajevsk šingotase savičtegimel i nahktegimel, mugažo maidtegim radab.
 
 == Geografijan andmused ==
 Lidn sijadase [[Išim (jogi)|Išiman]] tazangištol, 90 kilometras jogespäi, kesked penid järvid i soid, 126 m ü.m.t. keskmäižel korktusel. Nazivajevsk alištub sur'vezile gruntveden korktan tazopindan tagut. Matkad [[Omsk]]hasai om 140 km suvipäivnouzmha orhal (raudtedme) vai 205 km avtotedme. Lähembaižed lidnad oma [[Isil'kul']] 75 km suvhe avtotedme i [[Tükalinsk]] 75 km pohjoižpäivnouzmha avtol. «Tümen' — Omsk»-raudtejono jagab lidnad kaks'haze.
@@ -26,6 +28,11 @@ Nazivajevsk om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 68,7 
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 11 615 ristitud, rajonan pol'. Kaikiš suremb ristitišt oli 16 494 ristitud vl 1959.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Borisan i Gleban jumalanpert'<ref>[http://sobory.ru/geo/locat/3834 Nazivajevskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vll 2008−2011.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://naz.omskportal.ru/ru/municipal/localAuthList/3-52-236-1/poseleniya/nazyivaevskoe_gorodskoe.html Lidnankundan lehtpoled Nazivajevskan rajonan tobmuden aluzkundoiden oficialižel saital (''naz.omskportal.ru'').] {{ref-ru}}
