--- a/Tar_(lidn).mw
+++ b/Tar_(lidn).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Taran lidnanznam
  | Flag text = Taran flag
  | Valdkund = Venäma
- | Eläjiden lugu = 28,116
- | Voz' = 2017
+ | Eläjiden lugu = 28,268
+ | Voz' = 2021
  | Pind = 13.83
  | Fail = Panorama Tara.jpg
- | Pämez' = Evgenii Jeroševič<br />(tal'vku 2015—)
+ | Pämez' = Sergei Martinov<br />(tal'vku 2018—)
  | Telefonkod = +7-38171-xx-xxx
  | Avtokod = 55
  | Aigvö = [[UTC]]+6 ([[MSK]]+3)
@@ -17,9 +17,9 @@
 '''Tar''' ({{lang-ru|Тара}}) om [[Venäma]]n lidn da lidnankund [[Omskan agj]]an pohjoižes. Se om [[Taran rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud [[kozakišt]]ol erindas vl 1594 kuti Emäganpäivän jumalanpert' da rahvahidenkeskeine torguindkeskuz. Se seižui «Tobol'sk — Tomsk»-tel, ezmäine Venäman eländpunkt nügüdläižen Omskan agjan territorijal, alištui [[Tobol'sk]]an tobmudele. Aigan alusenpanendaspäi i 20. voz'sadahasai Tar oli oigetud küksushe mehiden sijaks. Paloi lujas vozil 1669 i 1709. Om kaičenus läz sadad endevanhid kivižid i pardesižid kaks'žiruižid pertid.
+Ende [[totarlaižed|totarlaižiden]] ''Jalom''-lidnut oli olmas Taran sijas. Nügüdläižen eländpunktan aluz om pandud sen sijha [[kozakišt]]ol erindas vl 1594 kuti Emäganpäivän jumalanpert' da rahvahidenkeskeine torguindkeskuz. Se seižui «Tobol'sk — Tomsk»-tel, ezmäine Venäman eländpunkt nügüdläižen Omskan agjan territorijal, alištui [[Tobol'sk]]an tobmudele. Aigan alusenpanendaspäi i 20. voz'sadahasai Tar oli oigetud küksushe mehiden sijaks. Paloi lujas vozil 1669 i 1709. Om kaičenus läz sadad endevanhid kivižid i pardesižid kaks'žiruižid pertid. Žilo sai makundan lidnan statusad vl 1782. Sen [[sibirin totarlaižed|sibirin totaran]] nimituz om ''Тары''.
 
-Žilo sai makundan lidnan statusad vl 1782. Lidn šingotase sömtegimišton edheotandoil, mugažo sadas [[kivivoi]]d da [[cirkonii|cirkonijad]] ümbrištos. Vspäi 2004 avtotesild Irtišan kal't om olmas, «Tobol'sk — Tomsk»-avtote om sauvomas kuti «Tümen' — Novosibirsk»-raudtejonon pohjoine parallel'.
+Tar-lidn šingotase sömtegimišton edheotandoil, mugažo sadas [[kivivoi]]d da [[cirkonii|cirkonijad]] ümbrištos. Vspäi 2004 avtotesild Irtišan kal't om olmas, «Tobol'sk — Tomsk»-avtote om sauvomas kuti «Tümen' — Novosibirsk»-raudtejonon pohjoine parallel'.
 
 == Geografijan andmused ==
 Lidn sijadase [[Irtiš]]-jogen hural randal, 70 m ü.m.t. keskmäižel korktusel. Matkad [[Omsk]]hasai om 220 km suvhe orhal vai 300 km avtotedme. Lähembaine lidn om [[Tükalinsk]] 176 km suvipäivlaskmha orhal vai 204 km avtotedme.
@@ -27,15 +27,29 @@ Lidn sijadase [[Irtiš]]-jogen hural randal, 70 m ü.m.t. keskmäižel korktusel
 Koume pen't žilod mülüdas lidnankundha Taran ližaks. Lidnankundan pind — 118,64 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 27 318 ristitud, lidnankundan — 27 408 ristitud, rajonan koume videndest. Vspäi 1989 lidnan ristitišt vajehtab 26..28 tuhad röunoiš, kaikiš suremb om nügüd'. Vl 2017 kaik 28 210 ristitud elädas lidnankundas. Ortodoksižen hristanuskondan Spasan päjumalanpert' i kaks' jumalanpertid, islaman pühäpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 27 318 ristitud, lidnankundan — 27 408 ristitud, rajonan koume videndest. Vspäi 1989 lidnan ristitišt vajehtab 26..28 tuhad röunoiš, kaikiš suremb om nügüd'. Vl 2017 kaik 28 116 elihe lidnas i 28 210 ristitud kaikes lidnankundas.
 
-Professionaližen opendusen aluzkundad: Taran industrialiž-pedagogine kolledž, Omskan agjan medicinižen kolledžan filial, Omskan valdkundaližiden pedagogižen i agrarižen universitetoiden filialad.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan päjumalanpert' i kaks' jumalanpertid, [[islam]]an pühäpert' oma olmas lidnas.
+
+Professionaližen opendusen aluzkundad: Taran industrialiž-pedagogine kolledž<ref>[http://типк.рф/ Taran industrialiž-pedagogižen kolledžan sait (''типк.рф'').] {{ref-ru}}</ref>, Omskan agjan medicinižen kolledžan filial, Omskan valdkundaližiden pedagogižen i agrarižen universitetoiden filialad.
+
+Edeline lidnankundan pämez' om Jevgenii Jeroševič (tal'vku 2015 — sügüz'ku 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Orlov House Tara.jpg|Lidnan kodirandantedištandmuzei (2011, ende Orlovan pert')
+Tara Spassky Church.jpg|Spasan päjumalanpert', vn 2011 nägu
+Derev tara.jpg|Puine kaks'žiruine pertišt Karbiševan irdal (2005)
+Khomyakov House Tara.jpg|Taran čomamahtoine muzei (2011, ende Homäkov-torgovanan pert')
+Sams most tara.jpg|Samsonovskii-avtotesild Irtišas päliči vl 2011
+</gallery>
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://tarsk.omskportal.ru/ru/municipal/localAuthList/3-52-254-1/poseleniya/tarskoe_gorodskoe.html Lidnankundan lehtpoled Taran rajonan tobmuden aluzkundoiden oficialižel saital (''tarsk.omskportal.ru'').] {{ref-ru}}
+* [http://tarsk.omskportal.ru/ Lidnan i Taran rajonan tobmuden aluzkundoiden sait (''tarsk.omskportal.ru'').] {{ref-ru}}
+* [http://taragorod.ru/ Lidnan informacine sait (''taragorod.ru'')] {{ref-ru}}
 {{Commons|Category:Tara, Omsk Oblast}}
 
 {{Omskan agjan lidnad}}
