*Empty MediaWiki Message*

--- a/Tar_(lidn).mw
+++ b/Tar_(lidn).mw
@@ -14,7 +14,7 @@
  | Avtokod = 55
  | Aigvö = [[UTC]]+6 ([[MSK]]+3)
 }}
-'''Tar''' ({{lang-ru|Тара}}) om [[Venäma]]n lidn da lidnankund [[Omskan agj]]an pohjoižes. Se om [[Taran rajon]]an administrativine keskuz.
+'''Tar''' ({{lang-ru|Та́ра}}) om [[Venäma]]n lidn da lidnankund [[Omskan agj]]an pohjoižes. Se om [[Taran rajon]]an administrativine keskuz.
 
 == Istorii ==
 Ende [[totarlaižed|totarlaižiden]] ''Jalom''-lidnut oli olmas Taran sijas. Nügüdläižen eländpunktan aluz om pandud sen sijha [[kozakišt]]ol erindas vl 1594 kuti Emäganpäivän jumalanpert' da rahvahidenkeskeine torguindkeskuz. Se seižui «Tobol'sk — Tomsk»-tel, ezmäine Venäman eländpunkt nügüdläižen Omskan agjan territorijal, alištui [[Tobol'sk]]an tobmudele. Aigan alusenpanendaspäi i 20. voz'sadahasai Tar oli oigetud küksushe mehiden sijaks. Paloi lujas vozil 1669 i 1709. Om kaičenus läz sadad endevanhid kivižid i pardesižid kaks'žiruižid pertid. Žilo sai makundan lidnan statusad vl 1782. Sen [[sibirin totarlaižed|sibirin totaran]] nimituz om ''Тары''.
