--- a/Tükalinsk.mw
+++ b/Tükalinsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Tükalinskan lidnanznam
  | Flag text = Tükalinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 10,326
- | Voz' = 2017
+ | Eläjiden lugu = 10,159
+ | Voz' = 2021
  | Pind = 44.6
  | Fail = Razliv Lake in Tyukalinsk.jpg
  | Pämez' = Viktor Vorotnikov<br />(tal'vku 2016—)
@@ -14,26 +14,30 @@
  | Avtokod = 55
  | Aigvö = [[UTC]]+6 ([[MSK]]+3)
 }}
-'''Tükalinsk''' ({{lang-ru|Тюкалинск}}) om [[Venäma]]n lidn da lidnankund [[Omskan agj]]an päivlaskmas. Se om [[Tükalinskan rajon]]an administrativine keskuz.
+'''Tükalinsk''' ({{lang-ru|Тюкали́нск}}) om [[Venäma]]n lidn da lidnankund [[Omskan agj]]an päivlaskmas. Se om [[Tükalinskan rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1759 kuti počtstancii. Vspäi 1763 se oli ''Tükal-slabadaks'' ({{lang-ru|слобода Тюкала}}) Sibirin traktal, anttihe nimed jogen mödhe. Vl 1823 slabad' sai lidnan statusad nügüdläiženke nimenke. 20. voz'sadan augotišespäi lidn kadoti endišt znamoičendad [[Transsib|Transsibirižen raudten]] sauvondanke, raudte mäneb sada kilometrad suvhe i läbitab Omskad.
 
+Tükalinskan edheotandad mülüdas sömtegimištho (leibtegim i voisagudkombinat). Mugažo šingotadas [[sapropel'|sapropelin]] ümbriradmine i turizman infrastruktur.
+
 == Geografijan andmused ==
-Lidn sijadase [[Išim (jogi)|Išiman]] tazangišton päivnouzmas, Tükalk-jogen randal ([[Irtiš]]an hurapol'ne bassein), 115 m keskmäižel korktusel valdmeren pindan päl. Jogi läbitab Razliv-järved lidnan südäimes. Matkad [[Omsk]]an röunhasai om 124 km suvipäivnouzmha. Lähembaine lidn om [[Nazivajevsk]] 75 km suvipäivlaskmha avtotedme.
+Lidn sijadase [[Išim (jogi)|Išiman]] tazangišton päivnouzmas, Tükalk-jogen randal ({{lang-ru|Тюкалка / Тюкала}} 44 km pitte, [[Irtiš]]an hurapol'ne bassein), 115 m keskmäižel korktusel valdmeren pindan päl. Jogi läbitab Razliv-järved lidnan südäimes. Matkad [[Omsk]]an röunhasai om 124 km suvipäivnouzmha. Lähembaine lidn om [[Nazivajevsk]] 75 km suvipäivlaskmha avtotedme.
 
 Tükalinsk om lidnankundan üks'jäine eländpunkt.
 
-== Eläjad da ižanduz ==
-Vl 1913 lidnan ristitišt oli 8 200 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 11 275 ristitud, koume seičemendest rajonan ristitištos. Kaikiš suremb ristitišton lugu oli vozil 1998−2000, 12 600 eläjad. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Johann-endustajan Sündundpäivän pühäpert' om olmas lidnas.
+== Eläjad ==
+Vl 1913 lidnan ristitišt oli 8 200 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 11 275 ristitud, koume seičemendest rajonan ristitištos. Kaikiš suremb ristitišton lugu oli 12 600 eläjad vozil 1998−2000.
 
-Tükalinskan edheotandad mülüdas sömtegimištho (leibtegim i voisagudkombinat). Mugažo šingotadas [[sapropel'|sapropelin]] ümbriradmine i turizman infrastruktur.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Johann-endustajan Sündundpäivän jumalanpert'<ref>[http://sobory.ru/geo/locat/4648 Tükalinskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (kivine om saudud vl 1982) om olmas lidnas. Stroican jumalanpertin sauvuz om kaičenus, no lämoipalonvastaine palakund radab siš.
+
+Professionaližen opendusen aluzkund om Tükalinskan professionaline kolledž.<ref>[http://tkolledg.ucoz.ru/ Tükalinskan professionaližen kolledžan sait (''tkolledg.ucoz.ru'').] {{ref-ru}}</ref>
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://tukalin.omskportal.ru/ru/municipal/localAuthList/3-52-256-1/poseleniya/tyukalinskoe_gorodskoe.html Lidnankund Tükalinskan rajonan tobmuden aluzkundoiden oficialižel saital (''tukalin.omskportal.ru'').] {{ref-ru}}
+* [http://tukalin.omskportal.ru/ Lidnan i Tükalinskan rajonan tobmuden aluzkundoiden sait (''tukalin.omskportal.ru'').] {{ref-ru}}
 * [http://www.tukalinskinfo.ru/ Tükalinsk-lidnankundan informacine sait (''tukalinskinfo.ru'').] {{ref-ru}}
 
 {{Omskan agjan lidnad}}
