--- a/Šadrinsk.mw
+++ b/Šadrinsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Šadrinskan lidnanznam
  | Flag text = Šadrinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 75,623
- | Voz' = 2017
- | Pind = 173.66
- | Fail = Theater Shadrinsk.JPG
- | Pämez' = Lüdmila Novikova<br />(semendku 2014—)
+ | Eläjiden lugu = 74,400
+ | Voz' = 2021
+ | Pind = 171.53
+ | Fail = 
+ | Pämez' = Anton Mokan<br />(kku 20—) Lüdmila Novikova<br />(semendku 2014—)
  | Telefonkod = +7-35253-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -27,9 +27,24 @@ Lidn sijadase Iset'-jogen muugotil randoil ([[Tobol]]an hura ližajogi), 80 m ü
 Šadrinsk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 77 756 ristitud. Kaikiš suremb ristitišt oli 86..88 tuh. eläjid vll 1986−2001 (88 500 rist. vl 1997). Ortodoksižen hristanuskondan 2 päjumalanpertid i jumalanpert', baptizman pühäpert' i islaman pämečet' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 77 756 ristitud. Kaikiš suremb ristitišt oli 86..88 tuh. eläjid vll 1986−2001 (88 500 rist. vl 1997).
 
-Professionaližen opendusen aluzkundad: Uralantagaine fizkul'turan da tervhuden kolledž, Šadrinskan politehnine, medicinine i finansiž-ekonomine kolledžad, proftehnologijoiden i kooperativine tehnikumad, Šadrinskan valdkundaline pedagogine universitet.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' päjumalanpertid i jumalanpert', [[baptizm]]an pühäpert' i [[islam]]an pämečet' oma olmas lidnas.
+
+Professionaližen opendusen aluzkundad: Uralantagaine fizkul'turan da tervhuden kolledž, Šadrinskan politehnine, medicinine i finansiž-ekonomine kolledžad, proftehnologijoiden i kooperativine tehnikumad, Šadrinskan valdkundaline pedagogine universitet<ref>[http://shgpi.edu.ru/ Šadrinskan valdkundaližen pedagogižen universitetan sait (''shgpi.edu.ru'').] {{ref-ru}}</ref>.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Shadrinsk photo0001.jpg|Lidnan administracijan sauvuz, vn 2004 nägu
+Спасо - Преображенскийй 02.JPG|Spasan Toižetamižen päjumalanpert', vn 2013 nägu
+Trade-rows-3 Shadrinsk.JPG|Istorižiden torguindrividen pala vl 2014
+Theater Shadrinsk.JPG|Šadrinskan valdkundaline dramteatr (2014)
+Palace-culture Shadrinsk.JPG|Lidnan kul'turkeskuz (2014)
+Monument-train-station.JPG|Monument Šadrinsk-päraudtestancijan sauvusenno vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.shadrinsk-city.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''shadrinsk-city.ru'').] {{ref-ru}}
