--- a/Šadrinsk.mw
+++ b/Šadrinsk.mw
@@ -8,8 +8,8 @@
  | Eläjiden lugu = 74,400
  | Voz' = 2021
  | Pind = 171.53
- | Fail = 
- | Pämez' = Anton Mokan<br />(kku 20—) Lüdmila Novikova<br />(semendku 2014—)
+ | Fail = Shadrinsk photo0001.jpg
+ | Pämez' = Anton Mokan<br />(sulaku 2021—)
  | Telefonkod = +7-35253-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -33,9 +33,10 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 77 756 ristitud. K
 
 Professionaližen opendusen aluzkundad: Uralantagaine fizkul'turan da tervhuden kolledž, Šadrinskan politehnine, medicinine i finansiž-ekonomine kolledžad, proftehnologijoiden i kooperativine tehnikumad, Šadrinskan valdkundaline pedagogine universitet<ref>[http://shgpi.edu.ru/ Šadrinskan valdkundaližen pedagogižen universitetan sait (''shgpi.edu.ru'').] {{ref-ru}}</ref>.
 
+Edeližed lidnan pämehed oma Lüdmila Novikova (semendku 2014 — sügüz'ku 2019) i Viktor Jermiškin (reduku 2019 — sulaku 2021).
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Shadrinsk photo0001.jpg|Lidnan administracijan sauvuz, vn 2004 nägu
 Спасо - Преображенскийй 02.JPG|Spasan Toižetamižen päjumalanpert', vn 2013 nägu
 Trade-rows-3 Shadrinsk.JPG|Istorižiden torguindrividen pala vl 2014
 Theater Shadrinsk.JPG|Šadrinskan valdkundaline dramteatr (2014)
