--- a/Pakistan.mw
+++ b/Pakistan.mw
@@ -19,7 +19,7 @@
 | Telefonkod = +92
 | Aigvö = [[UTC]]+5<ref>[http://www.timeanddate.com/worldclock/timezone.html?n=106 Daylight saving time dates for Pakistan – Islamabad between 2010 and 2019 (Kezaaigvön vajehtuz Pakistanan täht — Islamabad vll 2010−2019). — ''Timeanddate.com''.] {{ref-en}}</ref>
 }}
-'''Pakistan''' ({{lang-ur|پاکِستان}} ''Pakistan'' «puthiden ma», [[anglijan kel'|anglijan kelel]]: ''Pakistan''), vai '''Pakistanan Islamine Tazovaldkund''' ([[urdu]]-kelel: اسلامی جمہوریہ پاکِستان ''Islami Džumhurije Pakistan'', {{lang-en|Islamic Republic of Pakistan}}) om valdkund [[Azii|Azijan]] suves. Päine federacijan lidn om [[Islamabad]].
+'''Pakistan''' ({{lang-ur|پاکِستان}} ''Pakistan'' «puhthiden ma», [[anglijan kel'|anglijan kelel]]: ''Pakistan''), vai '''Pakistanan Islamine Tazovaldkund''' ([[urdu]]-kelel: اسلامی جمہوریہ پاکِستان ''Islami Džumhurije Pakistan'', {{lang-en|Islamic Republic of Pakistan}}) om valdkund [[Azii|Azijan]] suves. Päine federacijan lidn om [[Islamabad]].
 
 Pakistan om mail'man kudenz' valdkund ičeze ristitišton lugun mödhe da kahtenz' valdkund islamanuskojiden lugun mödhe ([[Indonezii|Indonezijan]] jäl'ghe).
 
