+ galerei, +hom, aktualizacii

--- a/Omsk.mw
+++ b/Omsk.mw
@@ -6,11 +6,11 @@
  | Lidnanznam text = Omskan lidnanznam
  | Flag text = Omskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 1,178,391
- | Voz' = 2017
- | Pind = 566.9
+ | Eläjiden lugu = 1,139,897
+ | Voz' = 2021
+ | Pind = 577.9
  | Fail = Omsk-kollazh.png
- | Pämez' = Oksana Fadina<br />(tal'vku 2017—)
+ | Pämez' = Sergei Šelest<br />(viluku 2022—)
  | Telefonkod = +7-3812-xxx-xxx
  | Avtokod = 55
  | Aigvö = [[UTC]]+6 ([[MSK]]+3)
@@ -35,35 +35,43 @@ Vozil 1918−1920 [[Venäman rahvahanikoiden soda]]n aigan Omsk oli Venäman val
 </div>]]
 Lidn sijadase [[Irtiš]]-jogen muugotil randoil [[Om'|Ominjogen]] lanktendan sijas, 90 m ü.m.t. keskmäižel korktusel. Lähembaižed lidnad oma [[Kalačinsk]] 65 km päivnouzmha raudtel vai avtol i [[Isil'kul']] 149 km päivlaskmha raudtedme vai avtotedme.
 
-Omsk om lidnümbrikon üks'jäine eländpunkt. Se jagase 5 administrativižhe ümbrikho vspäi 1945.
+Omsk om lidnümbrikon üks'jäine eländpunkt. Se jagase videks administrativižeks ümbrikoks vspäi 1945.
 
 == Eläjad ==
-Omsk kändihe millionerlidnaks vl 1979. Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 1 154 116 ristitud. Kaikiš suremb ristitišt oli 1 169 tuh. eläjid vl 1992 da om nügüd'.
+Omsk kändihe millionerlidnaks vl 1979. Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 1 154 116 ristitud. Kaikiš suremb ristitišt oli 1 169 tuh. eläjid vl 1992 i 1 178 tuh. eläjid vll 2016−2017.
 
 Rahvahad vl 2010 (ozutanuziden rahvahudes pala): [[venälaižed]] — 88,8%, [[kazahlaižed]] — 3,4%, [[ukrainalaižed]] — 2,0%, [[totarlaižed]] — 1,9%, [[saksalaižed]] — 1,3%, toižed rahvahad — 2,6%.
 
+Edeline lidnan pämez' om Oksana Fadina (tal'vku 2017 — sügüz'ku 2021).
+
 == Ižanduz ==
-Ekonomikan päsarakod oma kivivoin ümbriradmine, himine sarak, aerokosmižed tegimed, sodatehnikan tehmine (tankad, somuzavtod), maižanduztehnikan pästand, radioledimiden i avtodetaliden tehmine, sömtegimišt.
+Omskan ekonomikan päsarakod oma [[kivivoi]]n ümbriradmine, himine sarak (sintetine kaučuk, katalizatorad, tehnine hil'nik, polipropilen), aerokosmižed tegimed, sodatehnikan tehmine (tankad, [[somuzavto]]d), maižanduztehnikan pästand, radioladimiden i avtodetaliden tehmine, sömtegimišt.
 
 == Transport ==
 [[Transsib]]an raudtestancii om saudud Omskas vl 1896. Järed jogiport levineb läz raudtestancijad. Jogistancijaspäi passažirlaivad ujudas [[Salehard]]hasai.
 
-Rahvahidenkeskeine civiline da Venäman policijan Keskuzline Omsk-lendimport (''OMS / ОМС'') sijadase 5 kilometras suvipäivlaskmha lidnan keskusespäi. Vspäi 1989 uz' civiline Omsk-Födorovk-lendimport om sauvomas vajehtamha vanhad lendimportad. Sauvond sijadase 32 km lodeheze lidnan keskusespäi.
+Rahvahidenkeskeine civiline da Venäman policijan Keskuzline Omsk-lendimport<ref>[http://www.oms.aero/ Keskuzline Omsk-lendimportan sait (''oms.aero'').] {{ref-ru}}</ref> (''OMS / ОМС'') sijadase vides kilometras suvipäivlaskmha lidnan keskusespäi. Vspäi 1989 uz' civiline Omsk-Födorovk-lendimport om sauvomas vajehtamha vanhad lendimportad. Sauvond sijadase 32 km lodeheze lidnan keskusespäi.
 
 Avtobusad da trolleibusad oma kundaližeks transportaks lidnas. Vspäi 1992 metro vai kiruhtramvai sauvose lidnas. Viž manalašt stancijad lindäs ezmäižeks jonoks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание торговой фирмы 1.JPG|Lidnan administracijan sauvuz (2012, Venälaiž-Azijalaižen kompanijan sauvuz vll 1915−1917)
+Dormition of the Theotokos Church - Omsk.jpg|Jumalanmaman Emäganpäivän kafedraline päjumalanpert', vn 2012 nägu
+Установка изомеризации "Изомалк-2" ОАО "Газпромнефть-Омский НПЗ".jpg|Izomerizacijan mašin Omskan kivivoinümbriradajal tegimel vl 2010
+Gazpromneft - SM - 16.jpg|Omskan voidandmaterialiden tegim vl 2018 («[[Gazpromneft]]»)
+Сажевый завод - panoramio.jpg|«Omsktehuglerod»-tegim (nogentegim) vl 2011
+Omsk retail and office center Festival.JPG|Torguimiž-kontorine «Festival'»-keskuz hural randpolel (2010)
+Omsk Pushkin Library.jpg|Regionaline kirjišt (2005)
+ArenaOmsk.jpg|Omsk-aren (2013)
+Речной вокзал (Омск).JPG|Jogistancii vl 2015
+Omsk train station.jpg|Omsk-päraudtestancijan sauvused vl 2016
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Letov Jegor|Jegor Letov]] (Igor' Letov) (1964−2008) — oli Nevondkundaližen Ühtištusen i Venäman runokirjutai da muzikant.
 * [[Mel'nikova Dar'ja|Dar'ja Mel'nikova]] (sünd. 1992) — Venäman kinon da teatran aktris.
 * [[Vrubel' Mihail|Mihail Vrubel']] (1856−1910) — oli Venäman pirdai.
-
-== Galerei ==
-<gallery mode="packed" heights="125px">
-Omsk retail and office center Festival.JPG|Torguimiž-kontorine «Festival'»-keskuz hural randpolel
-Omsk Pushkin Library.jpg|Regionaline kirjišt
-ArenaOmsk.jpg|Omsk-aren
-Речной вокзал (Омск).JPG|Jogistancii
-</gallery>
 
 == Homaičendad ==
 <references />
