*Empty MediaWiki Message*

--- a/Omsk.mw
+++ b/Omsk.mw
@@ -1,7 +1,7 @@
 {{A10000}}
 {{Eländpunkt
  | Nimi = Omsk<br />Омск
- | Lidnanznam = Omsk coat of arms 2014.png
+ | Lidnanznam = Coat of arms of Omsk.svg
  | Flag = Flag of Omsk.svg
  | Lidnanznam text = Omskan lidnanznam
  | Flag text = Omskan flag
