*Empty MediaWiki Message*

--- a/Omsk.mw
+++ b/Omsk.mw
@@ -50,7 +50,7 @@ Omskan ekonomikan päsarakod oma [[kivivoi]]n ümbriradmine, himine sarak (sinte
 == Transport ==
 [[Transsib]]an raudtestancii om saudud Omskas vl 1896. Järed jogiport levineb läz raudtestancijad. Jogistancijaspäi passažirlaivad ujudas [[Salehard]]hasai.
 
-Rahvahidenkeskeine civiline da Venäman policijan Keskuzline Omsk-lendimport<ref>[http://www.oms.aero/ Keskuzline Omsk-lendimportan sait (''oms.aero'').] {{ref-ru}}</ref> (''OMS / ОМС'') sijadase vides kilometras suvipäivlaskmha lidnan keskusespäi. Vspäi 1989 uz' civiline Omsk-Födorovk-lendimport om sauvomas vajehtamha vanhad lendimportad. Sauvond sijadase 32 km lodeheze lidnan keskusespäi.
+Rahvahidenkeskeine civiline da Venäman policijan Keskuzline Omsk-lendimport<ref>[http://www.oms.aero/ Keskuzline Omsk-lendimportan sait (''oms.aero'').] {{ref-ru}} {{ref-en}}</ref> (''OMS / ОМС'') sijadase vides kilometras suvipäivlaskmha lidnan keskusespäi. Vspäi 1989 uz' civiline Omsk-Födorovk-lendimport om sauvomas vajehtamha vanhad lendimportad. Sauvond sijadase 32 km lodeheze lidnan keskusespäi.
 
 Avtobusad da trolleibusad oma kundaližeks transportaks lidnas. Vspäi 1992 metro vai kiruhtramvai sauvose lidnas. Viž manalašt stancijad lindäs ezmäižeks jonoks.
 
