+ galerei, +hom, aktualizacii

--- a/Dalmatovo.mw
+++ b/Dalmatovo.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Dalmatovon lidnanznam
  | Flag text = Dalmatovon flag
  | Valdkund = Venäma
- | Eläjiden lugu = 12,772
- | Voz' = 2017
+ | Eläjiden lugu = 11,938
+ | Voz' = 2021
  | Pind = 25
  | Fail = Г. Далматово - panoramio (62).jpg
- | Pämez' = Evgenii Volinec<br />(sügüz'ku 2014—)
+ | Pämez' = Sergei Spicin<br />(sügüz'ku 2019—,<br />''Сергей Спицин'')
  | Telefonkod = +7-35252-xx-xxx
  | Avtokod = 45
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -27,9 +27,25 @@ Lidn sijadase Iset'-jogen hural randal ([[Tobol]]an hura ližajogi), 100 m ü.m.
 Koume pen't küläd mülüdas lidnankundha Dalmatovon ližaks. Lidnankundan pind — 169,56 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 911 ristitud, lidnankundan — 14 172 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 17 494 eläjad vl 1989. Kaik 13 020 ristitud elihe lidnankundas vl 2017. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Emäganpäivän mez'jumalankodi udessündutase vspäi 2011.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 911 ristitud, lidnankundan — 14 172 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 17 494 eläjad vl 1989. Kaik 12 772 ristitud elihe lidnas i 13 020 ristitud kaikes lidnankundas vl 2017.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Emäganpäivän mez'jumalankodi<ref>[http://sobory.ru/geo/locat/3328 Dalmatovon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> udessündutase vspäi 2011.
 
 Kurganan tehnologižen kolledžan filial om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Jevgenii Volinec (sügüz'ku 2014 — eloku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Dalmatovo museum14.jpg|Kodirandantedištandmuzei (2018)
+Dalmatovsky Monastery 1.jpg|Udessündutadud Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen pühäpert' Dalmatovon jumalankodiš, vn 2015 nägu
+Г. Далматово - panoramio (4).jpg|Nikol'skii-torguindkeskuz vl 2012
+Двор где-то на Ленина - panoramio.jpg|Järgeline pertišt (2012)
+Далматово. Далматовский Успенский монастырь. Общий вид.jpg|Dalmatovon mez'jumalankodin ansambl', vn 2018 nägu
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.dalmatovo.org/ Lidnan tobmuden aluzkundoiden oficialine sait (''dalmatovo.org'').] {{ref-ru}}
