toine radai sait

--- a/Dalmatovo.mw
+++ b/Dalmatovo.mw
@@ -48,7 +48,7 @@ Dalmatovsky Monastery 1.jpg|Udessündutadud Jumalanmaman «Kaikiden gorähižide
 <references />
 
 == Irdkosketused ==
-* [http://www.dalmatovo.org/ Lidnan tobmuden aluzkundoiden oficialine sait (''dalmatovo.org'').] {{ref-ru}}
+* [http://dalmatovo.info/ Lidnan tobmuden aluzkundoiden oficialine sait (''dalmatovo.info'').] {{ref-ru}}
 * [http://dalmatovo.pro/ Lidnan kul'turan sait (''dalmatovo.pro'').] {{ref-ru}}
 {{Commons|Category:Dalmatovo}}
 
