--- a/Jumal.mw
+++ b/Jumal.mw
@@ -8,18 +8,19 @@ Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 
 == Jumalha sidotud vepsän muštatišed<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref> ==
 <blockquote>
-* ''Jumal ei käske edelpäi teta''.
-* ''Jumalan bardha em voigoi tabatas''.
-* ''Jumalata ala mäne nikuna''.
-* ''Kaite, i Jumal kaičeb''.
-* ''Kuna Jumal ozuti, sihe koled-ki''.
-* ''Mehed manitad, a Jumalan ed manita''.
-* ''Mehel om mela kädes, a Jumal venehen veb''.
-* ''Mez' magadab, a Jumal varjoičeb''.
-* ''Mez' söb, mez' sab, mehele andab Jumal''.
-* ''Min Jumal andab, sen Mustikei kandab''.
-* ''Rahvahaspäi voib kaik sijad peitta, a Jumalaspäi ei voi''.
-* ''Sinun sana da jumalale korvha''.
+* ''Andoi jumal sun, andab sömäd-ki.''
+* ''Jumal ei käske edelpäi teta.''
+* ''Jumalan bardha em voigoi tabatas.''
+* ''Jumalata ala mäne nikuna.''
+* ''Kaite, i Jumal kaičeb.''
+* ''Kuna Jumal ozuti, sihe koled-ki.''
+* ''Mehed manitad, a Jumalan ed manita.''
+* ''Mehel om mela kädes, a Jumal venehen veb.''
+* ''Mez' magadab, a Jumal varjoičeb.''
+* ''Mez' söb, mez' sab, mehele andab Jumal.''
+* ''Min Jumal andab, sen Mustikei kandab.''
+* ''Rahvahaspäi voib kaik sijad peitta, a Jumalaspäi ei voi.''
+* ''Sinun sana da jumalale korvha.''
 </blockquote>
 
 == Kacu mugažo ==
