/* Sömhä sidotud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -17,6 +17,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
+* ''Söm mehen kandišeb.''
 </blockquote>
 
 == Homaičendad ==
