/* Sömhä sidotud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -13,10 +13,12 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 == Sömhä sidotud vepsän muštatišed ==
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki.''
+* ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
+* ''Söid kut siga, läksid kut koza.''
 * ''Söm mehen kandišeb.''
 </blockquote>
 
