/* Sigha sidotud vepsän muštatišed */ +

--- a/Siga.mw
+++ b/Siga.mw
@@ -42,6 +42,7 @@ Kazvatadas maižanduzfermoiš da läviš samha [[sigaliha|lihad]] (mail'man tehm
 <blockquote>
 * ''Kaikuččel sigaižel om ičeze kärzaine.''
 * ''Länged sigale ei kožu.''
+* ''Söid kut siga, läksid kut koza.''
 </blockquote>
 
 == Kacu mugažo ==
