--- a/Ristit.mw
+++ b/Ristit.mw
@@ -20,6 +20,11 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * järedad päaivod, 3..4 kerdad suremb
 * sor'miden korväččed pölused
 
+== Ristithu sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pen' da tark, sur' da šläbäk.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
