--- a/Mez'.mw
+++ b/Mez'.mw
@@ -11,6 +11,11 @@ Mehen alaigäčud oma [[prihaine]] i [[priha]]. Suguküpsnemine zavodiše 12..13
 
 Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromosomad oma hänen kariotipas, znamoitas niid X i Y. Sen erineden naižen organizm om kahtenke X-hromosomanke.
 
+== Meheze sidodud vepsän muštatiž ==
+<blockquote>
+* ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
