--- a/Ristit.mw
+++ b/Ristit.mw
@@ -20,8 +20,9 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * järedad päaivod, 3..4 kerdad suremb
 * sor'miden korväččed pölused
 
-== Ristithu sidodud vepsän muštatiž ==
+== Ristithu sidodud vepsän muštatišed ==
 <blockquote>
+* ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Pen' da tark, sur' da šläbäk.''
 </blockquote>
 
